# simplifying-legal-content

./: README.md  dependencies.txt
backend/: pyproject.toml  requirements.txt
backend/backend/: __init__.py  __main__.py  abstractive_summarizer.py  extractive_summarizer.py  severity_classifier.py  simplifier.py
backend/backend/models/: hard_words.txt
backend/backend/models/severity/: vocab.pt
backend/tests/: test_extractive.py  test_severity.py
backend/tests/resources/: known_embeddings.npz
data/: evaluation_metrics.ipynb  tos-dr-5.7z
frontend/: .env  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.svelte  variables.js
frontend/src/assets/: core.css
frontend/src/lib/: ExtractivePoints.svelte  LoadingBar.svelte  SocialButtons.svelte  Spoiler.svelte
test/: dependencies.txt  test_eval.py  test_summary.py  test_tosdr.py  test_tosdr5.py  utils.py
test/data/: download.sh
test/src/: abstract_infer.py  extractive.py  lexrank_init.py  lsa_infer.py  tosdr5.py  tosdr_dataset.py
