[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Harry Peach <4750998+HarryPeach@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
uvicorn = {extras = ["standard"], version = "^0.17.5"}
lorem = "^0.1.1"
torch = "^1.11.0"
torchvision = "^0.12.0"
torchtext = "^0.12.0"
nltk = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "backend.__main__:main"