[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Harry Peach <4750998+HarryPeach@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
fastapi = "^0.75.0"
uvicorn = {extras = ["standard"], version = "^0.17.5"}
lorem = "^0.1.1"
torch = "^1.12.1"
torchvision = "^0.12.0"
torchtext = "^0.13.0"
nltk = "^3.7"
transformers = "^4.18.0"
tensorflow = "^2.8.0"
scikit-learn = "^1.0.2"
sentence-transformers = "^2.2.0"
numpy = "^1.22.3"
pytest-sugar = "^0.9.4"
single-version = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
expects = "^0.9.0"

[tool.poetry.group.dev.dependencies]
grpcio = "^1.51.3"
protobuf = "^3.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "backend.__main__:main"
